# cmdlog

./: .gitignore  LICENSE  Makefile  README.md  default.conf  install.sh
.github/workflows/: build.yml
dev/: Cargo.toml  run_tests.sh
dev/src/: cmd.rs  hook.rs  lib.rs  log.rs  main.rs  repo.rs  time.rs
dev/src/tui/: badge.rs  delete.rs  filter.rs  input.rs  mod.rs  state.rs  ui.rs
dev/src/tui/config/: hydrate.rs  inject.rs  mod.rs  save.rs  schema.rs  validate.rs
dev/tests/: test_cli.rs  test_cmd.rs  test_config.rs  test_filter.rs  test_hook.rs  test_input.rs  test_log.rs  test_repo.rs  test_state.rs  test_time.rs
hook/: cmdlog.bash  cmdlog.tcsh  cmdlog.zsh
