[package]
name = "cmdlog"
version = "2.8.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
nucleo-matcher = "0.3"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"

[dev-dependencies]
regex = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
